[package]
name = "libp2p_relay"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55.0", features = [
    "tokio", "dns", "cbor", "tcp", "websocket", "tls", "noise", "yamux", "identify", "relay", "macros", "ping"
] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.4"
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
